<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>iceoryx_integrationtest</name>
  <version>2.95.2</version>
  <description>iceoryx Software Integrationtest</description>
    <maintainer email="iceoryx-oss-support@apex.ai">Eclipse Foundation, Inc.</maintainer>
    <license>Apache 2.0</license>
    <url type="website">https://iceoryx.io</url>
    <url type="bugtracker">https://github.com/eclipse-iceoryx/iceoryx/issues</url>
    <url type="repository">https://github.com/eclipse-iceoryx/iceoryx</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>ros_testing</build_depend>

  <test_depend>ros_testing</test_depend>
  <test_depend>iceoryx_platform</test_depend>
  <test_depend>iceoryx_binding_c</test_depend>
  <test_depend>iceoryx_posh</test_depend>
  <test_depend>iceoryx_hoofs</test_depend>

  <test_depend>example_callbacks</test_depend>
  <test_depend>example_callbacks_in_c</test_depend>
  <test_depend>example_complexdata</test_depend>
  <test_depend>example_icedelivery</test_depend>
  <!-- <test_depend>example_ice_access_control</test_depend> -->
  <test_depend>example_icedelivery_in_c</test_depend>
  <test_depend>example_icediscovery</test_depend>
  <test_depend>example_icediscovery_in_c</test_depend>
  <test_depend>example_icehello</test_depend>
  <test_depend>example_iceoptions</test_depend>
  <test_depend>example_request_response</test_depend>
  <test_depend>example_request_response_in_c</test_depend>
  <test_depend>example_singleprocess</test_depend>
  <test_depend>example_user_header</test_depend>
  <test_depend>example_waitset</test_depend>
  <test_depend>example_waitset_in_c</test_depend>

  <test_depend>example_experimental_node</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
